# Proyecto_POOII

./: CMakeLists.txt  Casilla.cpp  Casilla.h  Casillas.cpp  Casillas.h  Dado.cpp  Dado.h  Ficha.cpp  Fichas.cpp  Fichas.h  Game.cpp  Game.h  Juego.cpp  Jugadores.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  README.md  Recorrido.cpp  Tablero.cpp  Tablero.h  main.cpp  posiciones.cpp
